# bookmarkapp

./: .gitignore  README.md  example.config.toml  pyproject.toml
bookmarkapp/: __init__.py  auth.py  controller.py
bookmarkapp/data/: sample.sql  schema.sql
bookmarkapp/models/: __init__.py  bookmark.py  database.py  exceptionlist.py  user.py  user_checks.py  util.py
bookmarkapp/static/css/: main.css
bookmarkapp/templates/: _base.html  add.html  add_user.html  confirm_delete_user.html  delete.html  detail.html  edit.html  error.html  index.html  login.html  users.html
