#
# Title: pyproject.toml
# Authors: Malachi Harris & Luke Hamann
# Date: 2024-08-31
# Updated: 2024-09-13
# Purpose: This file provides application packaging information.
#

[project]
name = "bookmarkapp"
version = "1.0"
description = "A web application for managing bookmarks"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
