[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bookmarkapp"
version = "1.0"
description = "A web application for managing bookmarks"
dependencies = [
    "flask",
]
requires-python = ">= 3.12"
authors = [
    {name = "Malachi Harris"},
    {name = "Luke Hamann"}
]
